--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.13.2",
     "rate-limiter": "^0.2.0",
     "swagger-ui-express": "^4.1.6",
+    "validator": "^13.15.0",
     "xss-clean": "^0.1.1",
     "yamljs": "^0.3.0"
   },
