--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "rate-limiter": "^0.2.0",
-    "swagger-ui-express": "^4.1.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
     "validator": "^13.15.0",
     "xss-clean": "^0.1.1",
     "yamljs": "^0.3.0"
